--- a/_layouts/remake.html
+++ b/_layouts/remake.html
@@ -10,13 +10,12 @@ layout: default
 
 <ul>
     <li><strong>Group(s):</strong> {{ page.group }}</li>
-    <li><strong>Remake Coder(s):</strong> {{ page.remake_coder }}</li>
     <li><strong>Original Coder(s):</strong> {{ page.original_coder }}</li>
     <li><strong>Original Musician(s):</strong> {{ page.original_musician }}</li>
     <li><strong>Original Gfxer(s):</strong> {{ page.original_gfx }}</li>
-    <li><strong>Release Year:</strong> {{ page.release_year }}</li>
+    <li><strong>Release Date:</strong> {{ page.release_date }}</li>
+    <li><strong>Remake Coder(s):</strong> {{ page.remake_coder }}</li>
     <li><strong>Remake Year:</strong> {{ page.remake_year }}</li>
-    <li><strong>Remake Rating:</strong> {{ page.remake_rating }}</li>
     <li><strong>Original Platform:</strong> {{ page.platform }}</li>
     <li><strong>Download:</strong> <a href="{{ page.download_link }}">Click here</a></li>
 </ul>
