--- a/_layouts/remake.html
+++ b/_layouts/remake.html
@@ -13,8 +13,8 @@ layout: default
     <li><strong>Original Coder(s):</strong> {{ page.original_coder }}</li>
     <li><strong>Original Musician(s):</strong> {{ page.original_musician }}</li>
     <li><strong>Original Gfxer(s):</strong> {{ page.original_gfx }}</li>
-    <li><strong>Release Date:</strong> {{ page.release_date }}</li>
     <li><strong>Remake Coder(s):</strong> {{ page.remake_coder }}</li>
+    <li><strong>Release Date:</strong> {{ page.release_date }}</li>
     <li><strong>Remake Year:</strong> {{ page.remake_year }}</li>
     <li><strong>Original Platform:</strong> {{ page.platform }}</li>
     <li><strong>Download:</strong> <a href="{{ page.download_link }}">Click here</a></li>
@@ -22,4 +22,14 @@ layout: default
 
 <hr>
 
+<h2>Controls</h2>
+<ul>
+    <li><strong>F11:</strong> Fullscreen toggle</li>
+    <li><strong>F12:</strong> Toggle CRT shader on/off</li>
+    <li><strong>Shift + F11:</strong> Display profiling information</li>
+</ul>
+
+<hr>
+
 {{ content }}
+
