--- a/_layouts/remake.html
+++ b/_layouts/remake.html
@@ -22,7 +22,7 @@ layout: default
 
 <hr>
 
-<h3>Controls</h3>
+<h3 style="margin-bottom: 5px;">Controls</h3>
 <ul>
     <li><strong>F11:</strong> Fullscreen toggle</li>
     <li><strong>F12:</strong> Toggle CRT shader on/off</li>
